# sendtg

./: Cargo.toml  README.md  sendmail
src/: main.rs
