[package]
name = "sendtg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
html-escape = "0.2.13"
mail-parser = "0.8.2"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
